[tool.poetry]
name = "job-spider"
version = "0.1.0"
description = ""
authors = ["jie <yanjya2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
pyppeteer = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
